--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-name: Arnob Karmokar
-tagline: Electrical and Electronic Engineer
-career-objective: This is a GitHub Pages template for academic portfolio websites. Fork <a href="https://github.com/academicportfolio/academicportfolio.github.io">this repository</a> to get started. This section will be replaced by your career objective. Read the README of the repository to learn about customizing the site.
+name: Parisa Shahabinejad
+tagline: Computer Engineering Student
+career-objective: Welcome To My Personal Website.
 color-theme: red # red or blue
-avatar-filename: avatar.png # Change to your avatar's filename
-url: academicportfolio.github.io
+avatar-filename: avatar.png
+url: parissashahabi.github.io
 baseurl: /
 paginate: 5
 paginate_path: "/blog/page:num/"
