set avatar filename

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name: Parisa Shahabinejad
 tagline: Computer Engineering Student
 career-objective: Welcome To My Personal Website.
 color-theme: red # red or blue
-avatar-filename: avatar.png
+avatar-filename: avatar.JPG
 url: parissashahabi.github.io
 baseurl: /
 paginate: 5
