add test scores

--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ collection_option:
     label: Publications
     visibility: true
   volunteerexperience: 
-    label: Volunteer Experience
+    label: Test Scores
     visibility: true
   certifications: 
     label: Certifications
