--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ collection_option:
     label: Certifications
     visibility: true
   achievements: 
-    label: Achievements
+    label: Teaching Experience
     visibility: true
 
 navigation:
