update about me section

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: Parisa Shahabinejad
 tagline: Computer Engineering Student
-career-objective: Welcome To My Personal Website.
+career-objective: I am an enthusiastic computer engineering student with a keen interest in machine learning and solving complex problems using deep learning. Along with my technical skills, I also have a creative side that loves painting and playing basketball. Cats are my favorite companions as they always cheer me up.
 color-theme: red # red or blue
 avatar-filename: avatar.JPG
 url: parissashahabi.github.io
