--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Parisa Shahabinejad
-tagline: Computer Engineering Student, Minor in Mathematics
+tagline: Computer Engineering Student, with a Minor in Mathematics
 career-objective: I am an enthusiastic computer engineering student with a keen interest in machine learning and solving complex problems using deep learning. Along with my technical skills, I also have a creative side that loves painting and playing basketball. Cats are my favorite companions as they always cheer me up.
 color-theme: blue # red or blue
 avatar-filename: avatar.JPG
