--- a/_config.yml
+++ b/_config.yml
@@ -121,7 +121,7 @@ disqus:
 
 # Contact Form
 formspree:
-  endpoint: https://formspree.io/f/xdorkgkv # Change with your own form's endpoint
+  endpoint: https://formspree.io/f/xeqbbvzb
 
 # Google Analytics
 google_analytics: UA—XXXXXXXX-X
