--- a/_config.yml
+++ b/_config.yml
@@ -124,4 +124,4 @@ formspree:
   endpoint: https://formspree.io/f/xeqbbvzb
 
 # Google Analytics
-google_analytics: UA—XXXXXXXX-X
+google_analytics: G-P7BRSYWSDL
